Fixed Jumbotron Display on Mobile Devices

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -164,11 +164,15 @@ body {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
+}
+@media (max-width: 600px) {
   #rcorners2 {
     margin-left: 0;
     margin-top: 1%;
   }
 }
+
+
 
 .jumbotron p:last-child {
   margin-bottom: 0;
